--- a/pkg/config/envs/.env
+++ b/pkg/config/envs/.env
@@ -1,3 +1,3 @@
 PORT=:50051
-DB_URL=postgres://<user>:<password>@<host>:<port>/<name>
+DB_URL=postgres://postgres:123456@localhost:5432/order_svc
 JWT_SECRET_KEY=example
